Add Verein (collective) link to footer contact column

--- a/templates/macros/footer.html
+++ b/templates/macros/footer.html
@@ -40,6 +40,7 @@
         <a href="{{ get_url(path='@/kontakt.md', lang=lang) }}">{{ trans(key="nav_kontakt", lang=lang) }}</a>
         <a href="{{ get_url(path='@/menschen.md', lang=lang) }}">{{ trans(key="nav_menschen", lang=lang) }}</a>
         <a href="{{ get_url(path='@/mitmachen.md', lang=lang) }}">{{ trans(key="nav_mitmachen", lang=lang) }}</a>
+        <a href="https://collective.die-zukunft.ch" target="_blank" rel="noopener noreferrer">{{ trans(key="footer_collective", lang=lang) }}</a>
         <a href="https://opencollective.com/die-zukunft" target="_blank" rel="noopener noreferrer">{{ trans(key="footer_donate", lang=lang) }}</a>
       </div>
 
