--- a/templates/macros/nav.html
+++ b/templates/macros/nav.html
@@ -72,6 +72,7 @@
         <a class="command-overlay__link" href="{{ get_url(path='@/uebergaenge.md', lang=lang) }}">{{ trans(key="nav_uebergaenge", lang=lang) }}</a>
         <a class="command-overlay__link" href="{{ get_url(path='@/life-science.md', lang=lang) }}">{{ trans(key="nav_life_science", lang=lang) }}</a>
         <a class="command-overlay__link" href="{{ get_url(path='@/grundeinkommen.md', lang=lang) }}">{{ trans(key="nav_grundeinkommen", lang=lang) }}</a>
+        <a class="command-overlay__link" href="{{ get_url(path='@/ubi-rechner.md', lang=lang) }}">{{ trans(key="nav_ubi_rechner", lang=lang) }}</a>
         <a class="command-overlay__link" href="{{ get_url(path='@/stadte-wohnen.md', lang=lang) }}">{{ trans(key="nav_stadte_wohnen", lang=lang) }}</a>
         <a class="command-overlay__link" href="{{ get_url(path='@/research-innovation.md', lang=lang) }}">{{ trans(key="nav_research_innovation", lang=lang) }}</a>
         <a class="command-overlay__link" href="{{ get_url(path='@/energy-resilience.md', lang=lang) }}">{{ trans(key="nav_energy_resilience", lang=lang) }}</a>
